--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
       <div class="board container">
         <section class="player player0 activePlayer">
           <h2 class="player0Header">player one</h2>
-          <div class="currentScore0"></div>
-          <div class="totalScore0"></div>
-        </section>
-        <section class="player player1 activePlayer">
-          <h2 class="player1Header">player two</h2>
-          <div class="currentScore1"></div>
-          <div class="totalScore1"></div>
+          <div class="currentScore">
+            current Score: <span class="currScore0">0</span>
+          </div>
+          <div class="totalScore">
+            total Score: <span class="score0">uuu</span>
+          </div>
         </section>
         <div class="btnContainer">
           <div class="wrapper">
             <button class="btn reset">reset</button>
           </div>
+          <div class="triangle"><span class="rollValue">0</span></div>
           <div class="wrapper">
             <button class="btn roll">roll</button>
           </div>
@@ -33,6 +33,15 @@
             <button class="btn hold">hold</button>
           </div>
         </div>
+        <section class="player player1">
+          <h2 class="player1Header">player two</h2>
+          <div class="currentScore">
+            current Score: <span class="currScore1">0</span>
+          </div>
+          <div class="totalScore">
+            total Score: <span class="score1">0</span>
+          </div>
+        </section>
       </div>
     </main>
     <script src="./index.js"></script>
